--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
         "express-handlebars": "^3.0.0",
         "express-validator": "^6.2.0",
         "mongodb": "^3.3.2",
+        "mongoose": "^6.0.6",
         "multer": "^1.4.2"
     }
 }
